2009-03-08  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontainerview.c
	(gimp_container_view_item_selected): formatting.

2009-03-07  Sven Neumann  <sven@gimp.org>

	* app/dialogs/stroke-dialog.c (stroke_dialog_response): disconnect
	from the "paint-info" combo-box before destroying the dialog. The
	GimpContainerView emits "select-item" from its dispose handler.

2009-03-07  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontainercombobox.c
	(gimp_container_combo_box_changed): do not attempt to chain up in
	a signal callback.

2009-03-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/file-jpeg/jpeg-load.c (load_image)
	* plug-ins/file-jpeg/jpeg-save.c (save_image): need to finish the
	progress update.

2009-03-05  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpuimanager.c: formatting.

2009-03-05  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/blinds.c: use enum GimpOrientationType instead
	of local #defines for HORIZONTAL and VERTICAL with identical
	values. Some indentation and formatting fixups.

2009-03-05  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpviewrendererimagefile.c
	(gimp_view_renderer_imagefile_get_icon)
	* plug-ins/print/print.c (query): removed GTK+ version checks that
	have become obsolete.

2009-03-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/file-uri/Makefile.am
	* plug-ins/file-uri/gimpmountoperation.[ch]: removed these files.

	* plug-ins/file-uri/uri-backend-gvfs.c: use GtkMountOperation
	instead of our copy of this widget.

2009-03-05  Sven Neumann  <sven@gimp.org>

	* configure.in: depend on GTK+ >= 2.14.4.

	* INSTALL: changed accordingly.

2009-03-05  Sven Neumann  <sven@gimp.org>

	Bug 573695 – 1-bit white background saved as PBM becomes all black

	* plug-ins/common/file-pnm.c: need to handle the special case that
	the image colormap has only one entry.

2009-03-04  Sven Neumann  <sven@gimp.org>

	Bug 574149 – Can't get name/filename of files loaded from URI
